src/test/ui/borrowck/borrowck-local-borrow-outlives-fn.ast.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/borrowck-local-borrow-outlives-fn.rs:15:5
   |
LL |     &x
   |     ^^ borrowed value does not live long enough
...
LL | }
   |  - `x` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
